- Added header and footers back in to index file

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body>
-        <!--<header class="container">
+        <header class="container">
             <div class="navbar navbar-default" id="menu">
                 <div class="navbar-header">
                     <button class="btn btn-success navbar-toggle"></button>
@@ -26,11 +26,11 @@
                     </ul>
                 </div>
             </div>
-        </header>-->
+        </header>
 
         <div data-ng-view=""></div>
 
-        <!--<footer class="container">
+        <footer class="container">
                 <div class="navbar-header">
                     <button class="btn btn-success navbar-toggle"></button>
                     <div id="logo">
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
         </footer>
-    </div>-->
+    </div>
     
 </body>
 <!-- 3rd party libraries -->
