- lots of progress.  Stuck on why I can't send params correctly via $location in characterController.goToStat()

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -28,7 +28,7 @@
             </div>
         </header>
 
-        <div data-ng-view=""></div>
+    <div data-ng-view=""></div>
 
         <footer class="container">
                 <div class="navbar-header">
@@ -63,8 +63,14 @@
 <script type="text/javascript" src="app/app.js"></script>
 <!-- Load controllers -->
 <script type="text/javascript" src="app/controllers/charactersRosterController.js"></script>
+<script type="text/javascript" src="app/controllers/characterController.js"></script>
+<script type="text/javascript" src="app/controllers/movementRankController.js"></script>
 <!-- Load Services-->
 <script type="text/javascript" src="app/services/charactersRosterService.js"></script>
+<script type="text/javascript" src="app/services/characterService.js"></script>
+<script type="text/javascript" src="app/services/characterMovementService.js"></script>
+<script type="text/javascript" src="app/services/characterMovesService.js"></script>
+<script type="text/javascript" src="app/services/movementRankService.js"></script>
 <!-- Load Filters-->
 </html>
 
