- Added contactus, and other footer pages - Completed phase 1 support for movement rankings - Partially completed move ranking support (added moverank view, controller, service) - Added MoveController api calls to support get all of a move by name - Adjust models and DTOs to have character name where necessary as well as FirstActionableFrame to an int and Value to a double where needed - Removed use of EntityToBusinessConverter as that approach wasn't working since a charactername is now needed (can't just copy the property over for this one, maybe stored procedures in the future for this so I can back to the converter and get the char name automatically)

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -19,8 +19,8 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#/index.html">Home</a></li>
-                        <li><a href="#/smash4">Smash 4</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/">Smash 4</a></li>
                         <li><a href="#/about">About Us</a></li>
                         <li><a href="#/glossary">Glossary</a></li>
                     </ul>
@@ -39,11 +39,11 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#/index.html">Home</a></li>
-                        <li><a href="#/qldsmash">qldsmash.com</a></li>
-                        <li><a href="#/twitter">twitter</a></li>
-                        <li><a href="#/smashboards">smashboards</a></li>
-                        <li><a href="#/contactus">Contact Us</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="http://qldsmash.com/Forum/Thread/smash-4-frame-data-site-wwwkuroganehammercom.204/1">qldsmash.com</a></li>
+                        <li><a href="https://twitter.com/KuroganeHammer">twitter</a></li>
+                        <li><a href="http://smashboards.com/">smashboards</a></li>
+                        <li><a href="#contactus">Contact Us</a></li>
                     </ul>
                 </div>
         </footer>
@@ -65,12 +65,14 @@
 <script type="text/javascript" src="app/controllers/charactersRosterController.js"></script>
 <script type="text/javascript" src="app/controllers/characterController.js"></script>
 <script type="text/javascript" src="app/controllers/movementRankController.js"></script>
+<script type="text/javascript" src="app/controllers/moveRankController.js"></script>
 <!-- Load Services-->
 <script type="text/javascript" src="app/services/charactersRosterService.js"></script>
 <script type="text/javascript" src="app/services/characterService.js"></script>
 <script type="text/javascript" src="app/services/characterMovementService.js"></script>
 <script type="text/javascript" src="app/services/characterMovesService.js"></script>
 <script type="text/javascript" src="app/services/movementRankService.js"></script>
+<script type="text/javascript" src="app/services/moveRankService.js"></script>
 <!-- Load Filters-->
 </html>
 
