--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -4,51 +4,46 @@
     <title>KuroganeHammer Sm4sh</title>
     <link href="content/css/bootstrap.min.css" rel="stylesheet" />
     <link href="content/css/cyborg.css" rel="stylesheet" />
-    <link href="Content/css/animateroster.css" rel="stylesheet"/>
+    <link href="Content/css/boxfade.css" rel="stylesheet" />
     <link href="content/css/site.css" rel="stylesheet" />
+    <link href="Content/css/sortorder.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body>
-        <header class="container">
-            <div class="navbar navbar-default" id="menu">
-                <div class="navbar-header">
-                    <button class="btn btn-success navbar-toggle"></button>
-                    <div id="logo">
-                        <h4>Welcome to the home of Kurogane Hammer</h4>
-                    </div>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/">Smash 4</a></li>
-                        <li><a href="#/about">About Us</a></li>
-                        <li><a href="#/glossary">Glossary</a></li>
-                    </ul>
+    <header class="container">
+        <div class="navbar navbar-default" id="menu">
+            <div class="navbar-header">
+                <button class="btn btn-success navbar-toggle"></button>
+                <div id="logo">
+                    <h4>Welcome to the home of Kurogane Hammer</h4>
                 </div>
             </div>
-        </header>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">Smash 4</a></li>
+                    <li><a href="#aboutus">About Us</a></li>
+                    <li><a href="#glossary">Glossary</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
-    <div data-ng-view=""></div>
-
-        <footer class="container">
-                <div class="navbar-header">
-                    <button class="btn btn-success navbar-toggle"></button>
-                    <div id="logo">
-                        <img src="http://kuroganehammer.com/logo/BowserLogo.png" />
-                    </div>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="http://qldsmash.com/Forum/Thread/smash-4-frame-data-site-wwwkuroganehammercom.204/1">qldsmash.com</a></li>
-                        <li><a href="https://twitter.com/KuroganeHammer">twitter</a></li>
-                        <li><a href="http://smashboards.com/">smashboards</a></li>
-                        <li><a href="#contactus">Contact Us</a></li>
-                    </ul>
-                </div>
-        </footer>
-    </div>
+    <div ng-view=""></div>
     
+    <footer class="container">
+            <div class="navbar-default">
+                <img width="100" height="100" src="http://kuroganehammer.com/logo/BowserLogo.png" />
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="http://qldsmash.com/Forum/Thread/smash-4-frame-data-site-wwwkuroganehammercom.204/1">qldsmash.com</a></li>
+                    <li><a href="https://twitter.com/KuroganeHammer">twitter</a></li>
+                    <li><a href="http://smashboards.com/">smashboards</a></li>
+                    <li><a href="#contactus">Contact Us</a></li>
+                </ul>
+            </div>
+    </footer>
+
 </body>
 <!-- 3rd party libraries -->
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
@@ -57,8 +52,6 @@
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-animate.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.9.0/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.9.0/ui-bootstrap-tpls.min.js"></script>
-<script type="text/javascript" src="scripts/toaster.js"></script>
-<script type="text/javascript" src="scripts/loading-bar.min.js"></script>
 <!-- Load app main script -->
 <script type="text/javascript" src="app/app.js"></script>
 <!-- Load controllers -->
