- Added new service and controller references to index.html

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -59,6 +59,7 @@
 <script type="text/javascript" src="app/controllers/characterController.js"></script>
 <script type="text/javascript" src="app/controllers/movementRankController.js"></script>
 <script type="text/javascript" src="app/controllers/moveRankController.js"></script>
+<script type="text/javascript" src="app/controllers/adminCharacterController.js"></script>
 <!-- Load Services-->
 <script type="text/javascript" src="app/services/charactersRosterService.js"></script>
 <script type="text/javascript" src="app/services/characterService.js"></script>
@@ -66,6 +67,8 @@
 <script type="text/javascript" src="app/services/characterMovesService.js"></script>
 <script type="text/javascript" src="app/services/movementRankService.js"></script>
 <script type="text/javascript" src="app/services/moveRankService.js"></script>
+<script type="text/javascript" src="app/services/movementService.js"></script>
+<script type="text/javascript" src="app/services/moveService.js"></script>
 <!-- Load Filters-->
 </html>
 
