- Added new api docs and new character views and a new character controller which is WIP.

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -24,6 +24,7 @@
                     <li><a href="/">Smash 4</a></li>
                     <li><a href="#aboutus">About Us</a></li>
                     <li><a href="#glossary">Glossary</a></li>
+                    <li><a href="#api">API</a></li>
                 </ul>
             </div>
         </div>
@@ -60,6 +61,7 @@
 <script type="text/javascript" src="app/controllers/movementRankController.js"></script>
 <script type="text/javascript" src="app/controllers/moveRankController.js"></script>
 <script type="text/javascript" src="app/controllers/adminCharacterController.js"></script>
+<script type="text/javascript" src="app/controllers/adminNewCharacterController.js"></script>
 <!-- Load Services-->
 <script type="text/javascript" src="app/services/charactersRosterService.js"></script>
 <script type="text/javascript" src="app/services/characterService.js"></script>
