- Another massive overhaul to get adminController written in typescript.  Lots of learning about how TypeScript and Angular work

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -80,6 +80,7 @@
 <script src="app/controllers/movementRankCtrl.js"></script>
 <script src="app/controllers/moveRankCtrl.js"></script>
 <script src="app/controllers/characterCtrl.js"></script>
+<script src="app/controllers/adminCharacterCtrl.js"></script>
 <!-- Load Domains-->
 <script src="app/domain/character.js"></script>
 <script src="app/domain/movement.js"></script>
