--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -81,9 +81,11 @@
 <script src="app/controllers/moveRankCtrl.js"></script>
 <script src="app/controllers/characterCtrl.js"></script>
 <script src="app/controllers/adminCharacterCtrl.js"></script>
+<script src="app/controllers/adminNewCharacterCtrl.js"></script>
 <!-- Load Domains-->
 <script src="app/domain/character.js"></script>
 <script src="app/domain/movement.js"></script>
 <script src="app/domain/move.js"></script>
+<script src="app/domain/charactermetadata.js"></script>
 </html>
 
