--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <title>KuroganeHammer Sm4sh</title>
-    <link href="content/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="content/css/cyborg.css" rel="stylesheet" />
+    <link href="content/css/bootstrap.css" rel="stylesheet" />
+    <!--<link href="content/css/cyborg.css" rel="stylesheet" />-->
     <link href="Content/css/boxfade.css" rel="stylesheet" />
     <link href="content/css/site.css" rel="stylesheet" />
     <link href="Content/css/sortorder.css" rel="stylesheet" />
@@ -25,9 +25,9 @@
                     <li><a href="#aboutus">About Us</a></li>
                     <li><a href="#glossary">Glossary</a></li>
                     <li><a href="#api">API</a></li>
-                    <li data-ng-hide="authentication.isAuth"><a href="#login">Login</a></li>
+                    <!--<li data-ng-hide="authentication.isAuth"><a href="#login">Login</a></li>
                     <li data-ng-show="authentication.isAuth"><a href="" ng-click="logOut()">Logout</a></li>
-                    <li><a href="#signup">Signup</a></li>
+                    <li><a href="#signup">Signup</a></li>-->
                 </ul>
             </div>
         </div>
