- Added Kurogane's character.css file locally to add theming to character pages

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -3,10 +3,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <title>KuroganeHammer Sm4sh</title>
     <link href="content/css/bootstrap.css" rel="stylesheet" />
-    <!--<link href="content/css/cyborg.css" rel="stylesheet" />-->
-    <link href="Content/css/boxfade.css" rel="stylesheet" />
+    <link href="Content/css/boxfade.css" rel="stylesheet"/>
     <link href="content/css/site.css" rel="stylesheet" />
-    <link href="Content/css/sortorder.css" rel="stylesheet" />
+    <link href="Content/css/sortorder.css" rel="stylesheet"/>
+    <link href="Content/css/character.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body>
