- Added frontend support for character attributes - This consists of a new characterAttribute and characterAttributeRoster controllers file.  These handle the loading of specific attribute data and the list of available attributes respectively - Added typescript model files for characterattribute.  These consist of a characterattributerow and a smaller model class for handling the single values that make up an attribute row and their names (see characterAttributeRow.ts) - Updated index.html to load new controllers and model js files - updated app.js with the new routes

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -15,6 +15,7 @@
                 <ul class="nav navbar-nav navbar-left" id="menu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#smash4">Smash 4</a></li>
+                    <li><a href="#attributes">Character Attributes</a></li>
                     <li><a href="#aboutus">About Us</a></li>
                     <li><a href="#glossary">Glossary</a></li>
                     <li><a href="#api">API</a></li>
@@ -75,10 +76,13 @@
 <script src="app/controllers/loginController.js"></script>
 <script src="app/controllers/indexController.js"></script>
 <script src="app/controllers/homeController.js"></script>
+<script src="app/controllers/characterAttributeCtrl.js"></script>
+<script src="app/controllers/characterAttributeRosterCtrl.js"></script>
 <!-- Load Domains-->
 <script src="app/domain/character.js"></script>
 <script src="app/domain/movement.js"></script>
 <script src="app/domain/move.js"></script>
 <script src="app/domain/charactermetadata.js"></script>
+<script src="app/domain/characterAttribute.js"></script>
 </html>
 
