- More work on attribute support on the frontend, but the majority of these changes are messing around with v2 of the backend.  Everything will start to shape up in the next few checkins.

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -78,11 +78,14 @@
 <script src="app/controllers/homeController.js"></script>
 <script src="app/controllers/characterAttributeCtrl.js"></script>
 <script src="app/controllers/characterAttributeRosterCtrl.js"></script>
+<script src="app/controllers/adminAttributeCtrl.js"></script>
 <!-- Load Domains-->
 <script src="app/domain/character.js"></script>
 <script src="app/domain/movement.js"></script>
 <script src="app/domain/move.js"></script>
 <script src="app/domain/charactermetadata.js"></script>
 <script src="app/domain/characterAttribute.js"></script>
+<script src="app/domain/characterAttributeRow.js"></script>
+<script src="app/domain/smashAttributeType.js"></script>
 </html>
 
