--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -6,7 +6,10 @@
     <link href="Content/css/boxfade.css" rel="stylesheet"/>
     <link href="content/css/site.css" rel="stylesheet" />
     <link href="Content/css/sortorder.css" rel="stylesheet"/>
-    <link href="Content/css/character.css" rel="stylesheet" />
+    <link href="Content/css/character.css" rel="stylesheet"/>
+    <link href="content/css/login/login.css" rel="stylesheet"/>
+    <!--<link href="content/css/login/style.css" rel="stylesheet"/>-->
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
 <body>
