- minor refactoring in dto - added attributes image hyperlink in characters roster in both mobile and desktop character roster page - Fixed Signup page css - updated links in index header

--- a/KuroganeHammer.Web/KuroganeHammer.Web/index.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/index.html
@@ -18,10 +18,12 @@
                 <ul class="nav navbar-nav navbar-left" id="menu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#smash4">Smash 4</a></li>
-                    <li><a href="#attributes">Character Attributes</a></li>
+                    <li><a href="http://kuroganehammer.com/Pokken">Pokkén Tournament</a></li>
+                    <li><a href="http://kuroganehammer.com/RivalsofAether">Rivals of Aether</a></li>
+                    <li><a href="http://kuroganehammer.com/Melee">Melee</a></li>
                     <li><a href="#aboutus">About Us</a></li>
                     <li><a href="#glossary">Glossary</a></li>
-                    <li><a href="#api">API</a></li>
+                    <li><a href="http://localhost/KHApi/help">API</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right" style="margin-right: auto;" id="menu">
                     <li data-ng-hide="authentication.isAuth"><a href="#login">Login</a></li>
@@ -41,6 +43,10 @@
                 <img width="100" height="100" src="http://kuroganehammer.com/logo/BowserLogo.png"/>
                 <ul class="list-inline">
                     <li><a href="#home">Home</a></li>
+                    <li><a href="#smash4">Smash 4</a></li>
+                    <li><a href="http://kuroganehammer.com/Pokken">Pokkén Tournament</a></li>
+                    <li><a href="http://kuroganehammer.com/RivalsofAether">Rivals of Aether</a></li>
+                    <li><a href="http://kuroganehammer.com/Melee">Melee</a></li>
                     <li><a href="http://qldsmash.com/Forum/Thread/smash-4-frame-data-site-wwwkuroganehammercom.204/1">qldsmash.com</a></li>
                     <li><a href="https://twitter.com/KuroganeHammer">twitter</a></li>
                     <li><a href="http://smashboards.com/">smashboards</a></li>
